--- a/ajax/vremea/style.css
+++ b/ajax/vremea/style.css
@@ -20,6 +20,7 @@
 }
 #vremea {
     float: left;
+    width: 30%;
     margin-top: 20px;
 }
 #map {
@@ -88,6 +89,6 @@ input[type=text] {
 }
 
 #map{
-    width:700px;
+    width:70%;
     height:200px;
 }
