--- a/ajax/vremea/style.css
+++ b/ajax/vremea/style.css
@@ -1,12 +1,10 @@
 #form_wrapper {
-    width: 100%;
     padding: 20px;
     background: white;
     border-radius: 5px;
     margin-top: 20px;
 }
 #vremea_wrapper {
-    width: 100%;
     padding: 20px;
     background: white;    
     border-radius: 5px;
@@ -27,12 +25,15 @@
     float: right;
 }
 #prognoza_wrapper {
-    width: 100%;
+    width: -webkit-fill-available;
     padding: 20px;
     float: left;
     margin-top: 20px;
     background: white;    
     border-radius: 5px;
+}
+#prognoza{
+    display: inline-flex;
 }
 ul {
     margin: 0px;
@@ -47,14 +48,16 @@ li img{
 }
 
 #prognoza_wrapper div {
-    float: left;
+    /*float: left;*/
     text-align: center;
 }
-#prognoza{
-    width: 100%;
+ 
+.div-day{
     margin-top: 20px;
-    margin-left:auto;
-    margin-right:auto;
+}
+.div-day span {
+        background: #BBDEFB;
+        padding: 5px;
 }
 html{
     background: #e3f2fd;
@@ -62,7 +65,7 @@ html{
 }
 
 body {
-    width:70%;
+    width:85%;
     margin-left:auto;
     margin-right:auto;
 }
