--- a/ajax/talcioc/style.css
+++ b/ajax/talcioc/style.css
@@ -34,6 +34,9 @@
     .produs_container {
         width: 100%;
     }    
+    .desktopOnly {
+        display: none;
+    }
 }
 #details {
     text-align: center;
