--- a/ajax/meniu/style.css
+++ b/ajax/meniu/style.css
@@ -1,3 +1,28 @@
+@media (max-width: 550px) {
+    .desktopOnly {
+        display: none;
+    }
+    .menu_item_img_container img {
+        width: 100%;
+    }
+    .addPreparat {
+        float: left; 
+        margin-right: 10px; 
+        margin-top: 15px;
+    }
+    .small-btn {
+        padding: 2px!important;
+        margin: 2px!important;
+        float: left;
+    }
+}
+@media (min-width: 551px) {
+    .addPreparat {
+        float: right; 
+        margin-right: 10px; 
+        margin-top: 15px;
+    }
+}
 body {
     font-family: Raleway,HelveticaNeue,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #222;
@@ -18,7 +43,7 @@ h1 {
     text-align: left;
 }
 .menu_item img {        
-    height: 150px;
+    max-width: 90%;
 }
 .menu_item_nume {
     font-weight: bold;
@@ -32,14 +57,6 @@ h1 {
 .menu_item_detalii {
     float: right;
 }
-.btn {
-    border-radius: 3px;
-    background: #e34262;
-    border: 1px solid #e34262;
-    padding: 10px;
-    text-decoration: none;
-    color: white;
-}
 .btn-contact{
     border-radius: 3px;
     background:#6796f9;
@@ -47,6 +64,24 @@ h1 {
     padding: 10px;
     text-decoration: none;
     color: white;
+}
+.btn {
+    border-radius: 3px;
+    background: #e34262;
+    border: 1px solid #e34262;
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+.btn-blue{
+    border-radius: 3px;
+    background:#6796f9;
+    border: 1px solid #6796f9;
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
 }
 .btn-cauta{
     border-radius: 3px;
@@ -72,17 +107,16 @@ tr{
     margin: 20px !important;
 }
 td {
-    padding-top: .5em;
-    padding-bottom: .5em;
+    padding: .2em;
 }
 .left-td{
-    width: 10%;
+    width: 20%;
 }
 .center-td{
-    width: 40%;
+    width: 50%;
 }
 .right-td{
-    width: 10%;
+    width: 30%;
 }
 #map {
     height: 500px;
@@ -97,17 +131,43 @@ td {
 #menu{
     margin-top: 20px;
 }
-input[type="text"] {
+.menuInput {
     padding: 10px;
     width:30%;
     border: none;
     border-bottom: solid 2px #c9c9c9;
     transition: border 0.3s;
-  }
-  input[type="text"]:focus,
-  input[type="text"].focus {
+}
+menuInput:focus, menuInput.focus {
     border-bottom: solid 2px #969696;
-  }
-  .space{
-      margin-top: 20px;
-  }
+}
+.space{
+    margin-top: 20px;
+}
+  
+.loading {
+    height: 100px;
+}
+.hidden {
+    display: none;
+}
+.tabel_input_reteta .menuInput {
+    width: 100%;
+}
+a:link    {
+    /* Applies to all unvisited links */
+    text-decoration:  none;
+} 
+a:visited {
+    /* Applies to all visited links */
+    text-decoration:  none;
+} 
+a:hover   {
+    /* Applies to links under the pointer */
+    text-decoration:  none;
+    cursor: pointer;
+} 
+a:active  {
+    /* Applies to activated links */
+    text-decoration:  none;
+} 
